Working pubsub with auditlog subscriber

--- a/dotnet/Autobarn.Website/appsettings.json
+++ b/dotnet/Autobarn.Website/appsettings.json
@@ -8,6 +8,7 @@
   },
   "ConnectionStrings": {
     "AutobarnSqlConnectionString": "Server=localhost;Database=Autobarn;User=autobarn;Password=autobarn;MultipleActiveResultSets=true;",
+    "AutobarnRabbitMq": "amqps://rkjgkbfx:VDx0GwAqb6uv755WXUpT3Og7z9nTdDI6@squid.rmq.cloudamqp.com/rkjgkbfx"
   },
   "DatabaseMode": "csv",
   // set this to "csv" to use the in-memory data store backed by CSV files
