Working gRPC pricing server in .NET

--- a/dotnet/Autobarn.Website/appsettings.json
+++ b/dotnet/Autobarn.Website/appsettings.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AutobarnPricingServerUrl": "https://workshop.ursatile.com:5003/",
   "ConnectionStrings": {
     "AutobarnSqlConnectionString": "Server=localhost;Database=Autobarn;User=autobarn;Password=autobarn;MultipleActiveResultSets=true;",
     "AutobarnRabbitMq": "amqps://rkjgkbfx:VDx0GwAqb6uv755WXUpT3Og7z9nTdDI6@squid.rmq.cloudamqp.com/rkjgkbfx"
