--- a/dotnet/Autobarn.Website/Autobarn.Website.csproj
+++ b/dotnet/Autobarn.Website/Autobarn.Website.csproj
@@ -15,6 +15,7 @@
 
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.16" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.16" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
