--- a/dotnet/Autobarn.Website/appsettings.json
+++ b/dotnet/Autobarn.Website/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AutobarnPricingServerUrl": "https://workshop.ursatile.com:5003/",
+  "AutobarnSignalRHubUrl": "https://workshop.ursatile.com:5001/hub",
   "ConnectionStrings": {
     "AutobarnSqlConnectionString": "Server=localhost;Database=Autobarn;User=autobarn;Password=autobarn;MultipleActiveResultSets=true;",
     "AutobarnRabbitMq": "amqps://rkjgkbfx:VDx0GwAqb6uv755WXUpT3Og7z9nTdDI6@squid.rmq.cloudamqp.com/rkjgkbfx"
